# WhisperHallu

./: demucsWrapper.py  pyproject.toml  requirements.txt  transcribeHallu.py
whisperhallu/: __init__.py
